# Supplier_Selection_Project

./: .env.example  .gitignore  API_REFERENCE.md  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EXTERNAL_DATA_GUIDE.md  PRODUCTION_READINESS.md  PROJECT_WALKTHROUGH.md  README.md  config.py  docker-compose.yml  packages.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_aegis_pipeline.py  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
analytics/: __init__.py  carbon_engine.py  concentration.py  mcda_engine.py  monte_carlo.py  risk_scoring.py  scenario_planner.py  should_cost.py  working_capital.py
data_ingestion/: __init__.py  external_data_loader.py  generate_seed_data.py  live_data_fetcher.py  populate_warehouse.py
database/: 00_MASTER_DEPLOY.sql  01_create_reference_tables.sql  02_create_master_tables.sql  03_create_transaction_tables.sql  04_create_market_tables.sql  05_create_esg_tables.sql  06_create_warehouse.sql  07_create_analytics_tables.sql  08_create_audit_tables.sql  09_seed_reference_data.sql
docs/: ARCHITECTURE.md  DATA_MODEL.md  SETUP_GUIDE.md
external_data_samples/: README.md  esg_assessments.csv  invoices.csv  materials.csv  po_line_items.csv  purchase_orders.csv  shipments.csv  suppliers.csv
pages/: 01_Executive_Dashboard.py  01_📈_Executive_Dashboard.py  02_Supplier_Scorecards.py  02_🏆_Supplier_Scorecards.py  03_Risk_Radar.py  03_⚡_Risk_Radar.py  04_Monte_Carlo_Lab.py  04_🎲_Monte_Carlo_Lab.py  05_Concentration_Analysis.py  05_🔎_Concentration_Analysis.py  06_Carbon_Dashboard.py  07_Should_Cost.py  (+12 more)
(+135 files in other folders)
